syntax = "proto3";

package yandex.cloud.priv.ai.node_deployer.v1;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/ai/node_deployer/v1;node_deployer_service";

message RunningInstance {
    string ipv6 = 1;
    string id = 2;
    StatusCode status_code = 3;
    enum StatusCode {
        STATUS_CODE_UNSPECIFIED = 0;
        CREATED = 1;
        SERVICE_RUNNING = 2;
    }
}
