syntax = "proto3";

package yandex.cloud.priv.audittrails.v1;

import "google/protobuf/struct.proto";
import "yandex/cloud/priv/servicecontrol/v1/resource.proto";
import "yandex/cloud/priv/validation.proto";


option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/audittrails/v1;audittrails";
option java_outer_classname = "PATEIS";

service EventIngestionService {
  rpc Write (WriteRequest) returns (WriteResponse);
}

message WriteRequest {
  google.protobuf.Struct event_payload = 1 [(bytes) = "<=65536"];
  repeated servicecontrol.v1.Resource resource_path = 2 [(size) = "1-128"];
}

message WriteResponse {
  repeated ValidationError validation_errors = 1;
}

message ValidationError {
  string type = 1;
  string message = 2;
}
