syntax = "proto3";

package yandex.cloud.priv.marketplace.v1alpha1;

import "google/api/annotations.proto";
import "yandex/cloud/priv/marketplace/v1alpha1/os_product_family_version.proto";
import "yandex/cloud/api/tools/options.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/marketplace/v1alpha1/console;marketplace";

service OsProductFamilyVersionsService {
  // Actually returns map<string,string>
  rpc BatchLogoUriResolve (OsProductFamilyVersionLogoIdsRequest) returns (OsProductFamilyVersionLogoIdsResponse) {
    option (google.api.http) = {get: "/marketplace/v1alpha1/console/osProductFamilyVersions/batchLogoUriResolve"};
    option (yandex.cloud.api.tools.method).lint_skip.http_verb = true;
  }
  rpc GetVersion (VersionIDRequest) returns (OsProductFamilyVersion) {
    option (google.api.http) = {get: "/marketplace/v1alpha1/console/osProductFamilyVersions/{version_id}"};
  }
}

message OsProductFamilyVersionLogoIdsRequest {
  string ids = 1;
}
message OsProductFamilyVersionLogoIdsResponse {
  // Actually, all message is map<string, string>, without field "response"
  map<string, string> response = 1;
}
message VersionIDRequest {
  string version_id = 1;
}
