syntax = "proto3";

package yandex.cloud.priv.test;

import "yandex/cloud/priv/validation.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/any.proto";
import "google/rpc/error_details.proto";

option java_outer_classname = "PVT";
option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/test;test";

message TestCase {
    string name = 1;
    google.protobuf.Any message = 2;
    google.rpc.BadRequest bad_request = 3;
    string go_disabled = 4;
}

message TestCases {
    repeated TestCase tests = 1;
}

message ValidationTest {
    google.protobuf.FieldMask update_mask = 99;

    string s1 = 1 [(required) = true];
    string s2 = 2 [(length) = ">1"];
    string s3 = 3 [(length) = "<10"];
    string s4 = 4 [(length) = ">=1"];
    string s5 = 5 [(length) = "<=10"];
    string s6 = 6 [(length) = "3-5"];
    string s7 = 7 [(pattern) = "[a-z][a-z0-9]*"];

    bytes b1 = 61 [(required) = true];
    bytes b2 = 62 [(length) = ">1"];
    bytes b3 = 63 [(length) = "<10"];
    bytes b4 = 64 [(length) = ">=1"];
    bytes b5 = 65 [(length) = "<=10"];
    bytes b6 = 66 [(length) = "3-5"];

    int64 i2 = 12 [(value) = ">1"];
    int64 i3 = 13 [(value) = "<10"];
    int64 i4 = 14 [(value) = ">=1"];
    int64 i5 = 15 [(value) = "<=10"];
    int64 i6 = 16 [(value) = "3-5"];

    google.protobuf.Int64Value wi2 = 112 [(value) = ">1"];
    google.protobuf.Int64Value wi3 = 113 [(value) = "<10"];
    google.protobuf.Int64Value wi4 = 114 [(value) = ">=1"];
    google.protobuf.Int64Value wi5 = 115 [(value) = "<=10"];
    google.protobuf.Int64Value wi6 = 116 [(value) = "3-5"];

    repeated int64 ri2 = 212 [(size) = ">1"];
    repeated int64 ri3 = 213 [(size) = "<10"];
    repeated int64 ri4 = 214 [(size) = ">=1"];
    repeated int64 ri5 = 215 [(size) = "<=10"];
    repeated int64 ri6 = 216 [(size) = "3-5"];
    repeated int64 ri7 = 217 [(unique) = true];

    double d2 = 22 [(value) = ">1.0"];
    double d3 = 23 [(value) = "<10.0"];
    double d4 = 24 [(value) = ">=1.0"];
    double d5 = 25 [(value) = "<=10"];
    double d6 = 26 [(value) = "3-5.0"];

    google.protobuf.DoubleValue wd2 = 122 [(value) = ">1.0"];
    google.protobuf.DoubleValue wd3 = 123 [(value) = "<10.0"];
    google.protobuf.DoubleValue wd4 = 124 [(value) = ">=1"];
    google.protobuf.DoubleValue wd5 = 125 [(value) = "<=10.0"];
    google.protobuf.DoubleValue wd6 = 126 [(value) = "3.0-5"];

    google.protobuf.Duration du1 = 31 [(required) = true];
    google.protobuf.Duration du2 = 32 [(value) = ">1s"];
    google.protobuf.Duration du3 = 33 [(value) = "<10s"];
    google.protobuf.Duration du4 = 34 [(value) = ">=1s"];
    google.protobuf.Duration du5 = 35 [(value) = "<=10s"];
    google.protobuf.Duration du6 = 36 [(value) = "3s-5s"];

    int64 mi1 = 51 [(value) = "1"];
    int64 mi2 = 52 [(value) = "1,2,7"];

    SomeMessage m1 = 91 [(required) = true];
    SomeEnum e1 = 92 [(required) = true];

    repeated string repeated_string = 93 [(pattern) = "|[a-z][-a-z0-9]{1,61}[a-z0-9]", (length) = "<=50", (unique) = true, (bytes) = "<=638"];

    map<string, string> map = 41 [(size) = ">0", (bytes) = "<=640", (length) = "<=63", (pattern) = "[-_0-9a-z]*", (map_key).length = "<=63", (map_key).pattern = "[a-z][-_0-9a-z]*"];

    map<string, google.protobuf.BytesValue> message_map = 42 [(bytes) = "<328"];

    map<string, SomeMessage> some_message_map = 43 [(bytes) = "<328"];

    oneof options {
        option (exactly_one) = true;
        string option1 = 1001;
        string option2 = 1002;
    }

    message SomeMessage {
        int64 size = 31 [(yandex.cloud.priv.value) = ">=1"];
        repeated string repeated_string = 32 [(pattern) = "|[a-z][-a-z0-9]{1,61}[a-z0-9]", (length) = "<=50", (unique) = true, (bytes) = "<=638"];
    }

    repeated SomeMessage repeated_message = 101 [(unique) = true];

    enum SomeEnum {
        SOME_ENUM_UNSPECIFIED = 0;
        A = 1;
        B = 2;
    }
}
